--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.7"
 rayon = "1.3"
+
+[dev-dependencies]
+rand = "0.7"
 
 [profile.release]
 debug = true
